Estruturação do site 10 06 15h

--- a/index.html
+++ b/index.html
@@ -9,6 +9,34 @@
 
 </head>
 <body>
-    <h1>Regina Artesanatos e Culinária</h1>
+    <header>
+        <h1>Regina Artesanatos e Culinária</h1>
+        <p>Trabalho com confecção de artesantos diversos, doces e salgados manufaturados.</p>
+    </header>
+    <nav>
+        <a href="#">Home</a>
+        <a href="#">Artesanato</a>
+        <a href="#">Doces</a>
+        <a href="#">Salgados</a>
+        <a href="#">Contato</a>
+    </nav>
+    <main>
+        <h2>Artesanatos</h2>
+        <p>Alguns exemplos de artesanatos confeccionados por mim.</p>
+
+        <ul>
+            <li>Bonecas</li>
+            <li>Pesos de porta</li>
+            <li>Datas comemorativas</li>
+        </ul>
+
+        <h2>Doces</h2>
+        <p>Alguns doces confeccionados por mim.</p>
+
+        <h2>Artesanatos</h2>
+        <p>Alguns salgados confeccionados por mim.</p>        
+
+    </main>
+    <footer>Site criado por José Adeilton</footer>
 </body>
 </html>
