--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
         <p>Alguns salgados confeccionados por mim.</p>        
 
     </main>
-    <footer>Site criado por <a class="email" href="j.adeilton@terra.com.br">José Adeilton</a></footer>
+    <footer>Site criado por <a class="email" href="j.adeilton@terra.com.br">J.Adeilton</a></footer>
 </body>
 </html>
